Fix text alignment Issue on recipe cards

--- a/seng401-project/src/components/styles/About.css
+++ b/seng401-project/src/components/styles/About.css
@@ -88,11 +88,6 @@ p {
 }
 
 
-    
-    h2, h3 {
-      line-height: 0.45; /* Adjust as needed */
-    }
-    
 
     h3 {
       color: rgb(68, 115, 160);
